--- a/log.conf
+++ b/log.conf
@@ -18,7 +18,7 @@ formatter=longFormatter
 
 [handler_consoleHandler]
 class=StreamHandler
-level=DEBUG
+level=WARNING
 formatter=shortFormatter
 args=(sys.stdout,)
 
