--- a/verbose.conf
+++ b/verbose.conf
@@ -18,7 +18,7 @@ formatter=longFormatter
 
 [handler_consoleHandler]
 class=StreamHandler
-level=WARNING
+level=DEBUG
 formatter=shortFormatter
 args=(sys.stdout,)
 
